[package]
name = "milstian-templates"
version = "0.1.0"
authors = ["Christian Johansson <christian@cvj.se>"]
description = "My first experiment with a lightweight and dynamic template system in Rust"
license = "GPL-3.0-only"
repository = "https://github.com/cjohansson/milstian-templates"

[dependencies]

